# hs-wp-api

./: ChangeLog.md  README.md  hs-wp-api.cabal  index.md  makefile  stack.yaml
app/: Main.hs
docs/: endpoints.html  index.html  monad.html  overview.html  types.html
src/Web/Api/: WordPress.hs  WordPress.lhs
src/Web/Api/WordPress/: Endpoints.lhs  Monad.lhs  Types.lhs
test/: Test.hs
