name:           hs-wp-api
version:        0.0.0.0
description:    Please see the README on GitHub at <https://github.com/nbloomf/hs-wp-api#readme>
homepage:       https://github.com/nbloomf/hs-wp-api#readme
bug-reports:    https://github.com/nbloomf/hs-wp-api/issues
author:         Nathan Bloomfield
maintainer:     nathan.bloomfield@automattic.com
copyright:      2018 Automattic, Inc.
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
cabal-version:  1.12

extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/nbloomf/hs-wp-api

library
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
      base >=4.7 && <5
  exposed-modules:
      Web.Api.WordPress

executable hs-wp-api-exe
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hs-wp-api

test-suite hs-wp-api-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hs-wp-api
